# codesdrilling

./: .replit  README.md  app.py  app.py.bak  app_fixed.py  cookies.txt  login.py  main.py  main_window.py  pyproject.toml  replit.nix  report_generator.py  styles.qss  utils.py  visualization.py  widgets.py
